--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,12 @@ services:
         ports: 
             - '8888:8888'
         volumes:
-            - /work:/home/jovyan/work         
-        
+            - ~/BDP2_review/work:/home/jovyan/work         
+    portainer:
+        image: 'portainer/portainer'
+        ports:
+            - '9000:9000'
+        restart: always      
+        volumes:
+            - /var/run/docker.sock:/var/run/docker.sock
+            - ~/portainer_data:/data
